styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
}

@layer utilities {
  .main-layout {
    @apply w-full grid grid-cols-[1rem_1fr_1rem];
  }

  .main-layout-content {
    @apply col-start-2 container max-w-md sm:max-w-2xl mx-auto;
  }

  .text-balance {
    text-wrap: balance;
  }

  .heading-1 {
    @apply text-3xl;
  }

  .heading-2 {
    @apply text-2xl;
  }

  .heading-3 {
    @apply text-xl;
  }

  .heading-4 {
    @apply text-lg;
  }

  .link {
    @apply underline;
  }

  .text-button {
    @apply text-neutral-500;
  }

  .input {
    @apply p-1 border-2 border-neutral-400 bg-neutral-50 text-black placeholder-neutral-200 rounded-sm focus-visible:outline-none focus-visible:border-black;
  }

  .input-lg {
    @apply input;
    @apply text-2xl md:text-3xl;
    @apply px-2 py-3;
    border-width: 3px;
  }

  .input-xl {
    @apply input-lg;
    @apply py-4;
    @apply text-4xl md:text-5xl;
  }

  .button {
    @apply bg-black text-white dark:invert rounded;
  }
}

